bad/bin_op_eq_int_null.example_compiler_output
ERROR
[1mbad/bin_op_eq_int_null.lat:3:5: [1;31merror: [0;1moperator == cannot compare values of types `int` and `null` because values are not convertible to either of the two types[m
	42 == null;
	   [1;32m^[m
